Test/dafny4/git-issue149.dfy.expect
git-issue149.dfy(8,28): Error: the type of this variable is underspecified
git-issue149.dfy(8,33): Error: type parameter 'T' (inferred to be '?') in the function call to 'Foo' could not be determined
git-issue149.dfy(8,19): Error: type of bound variable 'm' could not be determined; please specify the type explicitly
3 resolution/type errors detected in git-issue149.dfy
